--- a/example/AntDesign.Pro.Layout.Wasm/AntDesign.Pro.Layout.Wasm.csproj
+++ b/example/AntDesign.Pro.Layout.Wasm/AntDesign.Pro.Layout.Wasm.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\AntDesign.Pro.Layout.csproj" />
+    <ProjectReference Include="..\..\src\AntDesign.Pro.Layout\AntDesign.Pro.Layout.csproj" />
   </ItemGroup>
 
   <ItemGroup>
