--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -34,7 +34,7 @@ jobs:
                   npm i
                   SUFFIX=`date "+%y%m%d%H%M%S"`
                   dotnet build
-                  dotnet pack src/AntDesign.Pro.Layout.csproj /p:PackageVersion=$Version-nightly-${SUFFIX} -c Release -o publish
+                  dotnet pack src/AntDesign.Pro.Layout/AntDesign.Pro.Layout.csproj /p:PackageVersion=$Version-nightly-${SUFFIX} -c Release -o publish
 
             - name: Publish to Nuget ✔
               run: |
