--- a/example/AntDesign.Pro.Layout.Wasm/AntDesign.Pro.Layout.Wasm.csproj
+++ b/example/AntDesign.Pro.Layout.Wasm/AntDesign.Pro.Layout.Wasm.csproj
@@ -8,12 +8,11 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.0" PrivateAssets="all" />
-    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="5.0.0" />
     <PackageReference Include="System.Net.Http.Json" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\AntDesign.Pro.Layout\AntDesign.Pro.Layout.csproj" />
+    <ProjectReference Include="..\..\src\AntDesign.Pro.Components\AntDesign.Pro.Components.csproj" />
   </ItemGroup>
 
   <ItemGroup>
