--- a/src/AntDesign.Pro.Layout.csproj
+++ b/src/AntDesign.Pro.Layout.csproj
@@ -16,6 +16,10 @@
     <Copyright>James Yeung</Copyright>
     <Authors>James Yeung</Authors>
     <PackageIcon>logo.png</PackageIcon>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <EmbedUntrackedSources>true</EmbedUntrackedSources>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
 
   <ItemGroup>
@@ -23,8 +27,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="AntDesign" Version="0.6.0-*" />
+    <ProjectReference Include="d:\dotnet\AntDesignBlazor\Forked\Components\components\AntDesign.csproj" />
   </ItemGroup>
+  
+  <!--<ItemGroup>
+    <PackageReference Include="AntDesign" Version="0.6.0-*" />
+  </ItemGroup>-->
 
   <PropertyGroup Condition=" '$(Configuration)' == 'Debug' And '$(SolutionDir)'==''">
     <SolutionDir>../</SolutionDir>
