--- a/src/AntDesign.Pro.Layout.csproj
+++ b/src/AntDesign.Pro.Layout.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.1;net5</TargetFrameworks>
-    <LangVersion>9.0</LangVersion>
+	<TargetFrameworks>net6.0</TargetFrameworks>
+	<LangVersion>latest</LangVersion>
     <OutputType>Library</OutputType>
     <IsPackable>true</IsPackable>
     <RazorLangVersion>3.0</RazorLangVersion>
@@ -21,10 +21,6 @@
   <ItemGroup>
     <None Include="logo.png" Pack="true" PackagePath="" />
   </ItemGroup>
-  
-  <ItemGroup>
-    <PackageReference Include="AntDesign" Version="0.6.0-*" />
-  </ItemGroup>
 
   <PropertyGroup Condition=" '$(Configuration)' == 'Debug' And '$(SolutionDir)'==''">
     <SolutionDir>../</SolutionDir>
@@ -37,17 +33,21 @@
     </Exec>
     <Error Condition="'$(ErrorCode)' != '0'" Text="Node.js is required to build and run this project. To continue, please install Node.js from https://nodejs.org/, and then restart your command prompt or IDE." />
     <Message Importance="high" Text="Restoring dependencies using 'npm'. This may take several minutes..." />
-    <Exec WorkingDirectory="$(SolutionDir)" Command="npm install" />
+    <!--<Exec WorkingDirectory="$(SolutionDir)" Command="npm install" />-->
   </Target>
 
-  <Target Name="DebugRunGulp" BeforeTargets="DebugEnsureNodeEnv" Condition=" '$(Configuration)' == 'Debug' And Exists('$(SolutionDir)node_modules') ">
+  <!--<Target Name="DebugRunGulp" BeforeTargets="DebugEnsureNodeEnv" Condition=" '$(Configuration)' == 'Debug' And Exists('$(SolutionDir)node_modules') ">
     <Exec WorkingDirectory="$(SolutionDir)" Command="npm run gulp:layout" />
-  </Target>
+  </Target>-->
 
   <Target Name="PublishRunGulp" AfterTargets="ComputeFilesToPublish">
     <Exec WorkingDirectory="$(SolutionDir)" Command="npm install" />
     <Exec WorkingDirectory="$(SolutionDir)" Command="npm run gulp:layout" />
   </Target>
+
+  <ItemGroup>
+    <ProjectReference Include="C:\dotnet\AntDesignBlazor\Forked\Components\components\AntDesign.csproj" />
+  </ItemGroup>
 
   <ItemGroup>
     <Content Update="**\*.razor">
